...
            ),
            actions: [
              TextButton(
                onPressed: () {
                  Navigator.pop(context);
                },
                child: const Text('Cancel'),
              ),
              TextButton(
                onPressed: () {
                  if (_nameController.text.isNotEmpty) {
                    final newGame = Game(
                        name: _nameController.text,
...
      if (!isCreatorInGame) {
        if (!mounted) return;
        final startAnyway = await showDialog<bool>(
          context: context,
          builder: (BuildContext context) {
            return AlertDialog(
              title: const Text("You are not playing!"),
              content: const Text(
                  "You have not added yourself to the player list for this game. Do you want to start the game anyway?"),
              actions: [
                TextButton(
                  onPressed: () => Navigator.pop(context, false),
                  child: const Text("Cancel"),
                ),
                TextButton(
                  key: const Key("btnStartAnyway"),
                  onPressed: () => Navigator.pop(context, true),
                  child: const Text("Start Anyway"),
                ),
              ],
            );
          },
...
              FloatingActionButton.extended(
                heroTag: "btnStartGame",
                onPressed: _startGame,
                label: const Row(
                  children: [
                    Icon(Icons.sports_golf_rounded),
                    Text("Start the game!")
                  ],
                ),
              ),
            ],
          ),
        ),
...
