...
      appBar: (widget.creatingGame == true)
          ? AppBar(
              title: const Text('Select Players'),
              actions: [
                TextButton(
                  onPressed: _clearAll,
                  child: const Text('Clear All'),
                ),
              ],
            )
          : (loggedInUser == null
              ? AppBar(title: const Text('Friends'))
              : null),
...
                    foregroundColor: Colors.white,
                    minimumSize: const Size(double.infinity, 56.0),
                    shape: RoundedRectangleBorder(
                      borderRadius: BorderRadius.circular(24.0),
                    ),
                  ),
                  child: const Text('Add selected players to game.',
                      style:
                          TextStyle(fontSize: 16, fontWeight: FontWeight.bold)),
                ),
              ),
            )
          : null,
...
