...
                title: const Text('Course'),
                subtitle: Text(_selectedCourse?.name ?? 'Select a course'),
                onTap: _selectCourse,
              ),
              const SizedBox(height: 16.0),
              ListTile(
                title: const Text('Players'),
                subtitle: Text(
                  '${_selectedPlayers.length} ${_selectedPlayers.length == 1 ? 'player' : 'players'} selected',
                ),
                onTap: _selectPlayers,
              ),
              const SizedBox(height: 16.0),
...
